# newclid-with-new-theorems

./: .env  ANDREY_DAGGER_CHANGES.md  MY_CODE  flake.nix  my_code.patch  my_script.py  my_tests.py
.github/workflows/: coverage.yml  documentation.yml  tests.yml
drawer/: README.md  geometry_constraints.py  geometry_drawer.py
drawer/examples/: imo2004_p1.txt  imo2007_p2.txt  imo2008_p1.txt  imo2014_p4.txt  imo2019_p2.txt  simple.txt
drawer/tests/: test_geometry_drawer.py
newclid/src/newclid/: all_rules.py
newclid/src/newclid/predicates/: _index.py  cyclic.py
output/: proof.txt  run_infos.json
output/html/: dependency_graph.html  index.html
yuclid/python/py_yuclid/: yuclid_adapter.py
yuclid/src/: CMakeLists.txt  matcher.cpp  matcher.hpp  theorem.cpp  theorem.hpp
yuclid/src/statement/: ncyclic.cpp  ncyclic.hpp
